[package]
name = "komokana"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3", features = ["derive", "wrap_help"] }
color-eyre = "0.6"
dirs = "4"
env_logger = "0.9"
json_dotpath = "1"
log = "0.4"
miow = "0.4"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.8"

[dependencies.windows]
version = "0.39"
features = [
    "Win32_UI_Input_KeyboardAndMouse",
]
