[package]
name = "komorebi-client"
version = "0.1.37"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
komorebi = { path = "../komorebi" }

uds_windows = { workspace = true }
serde_json = { workspace = true }

[features]
default = ["schemars"]
schemars = ["komorebi/schemars"]
