[package]
name = "komorebi-egui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.27" }
komorebi-client = { path = "../komorebi-client" }
serde_json = { workspace = true }
random_word = { version = "0.4.3", features = ["en"] }
windows = { workspace = true }
egui_extras = { version = "0.27" }