[package]
name = "komorebi-gui"
version = "0.1.37"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
komorebi-client = { path = "../komorebi-client" }

eframe = { workspace = true }
egui_extras = { workspace = true }
random_word = { version = "0.5", features = ["en"] }
serde_json = { workspace = true }
windows-core = { workspace = true }
windows = { workspace = true }