[package]
name = "komorebi-layouts"
version = "0.1.40"
edition = "2024"

[dependencies]
clap = { workspace = true }
color-eyre = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
strum = { workspace = true }
tracing = { workspace = true }

# Optional dependencies
schemars = { workspace = true, optional = true }
windows = { workspace = true, optional = true }

[features]
schemars = ["dep:schemars"]
win32 = ["dep:windows"]
